# ext4-reader

./: cat.py  dump.py  ext4.py  ls.py  pyproject.toml  readme.md
ext4/: __init__.py  data_structures.py  ext4.py  files.py  tools.py
