[project]
name = "ext4-reader"
version = "1.0.0"
authors = [
  { name="Henry-Joseph Audéoud" },
]
description = "Minimalist ext4 read-only implementation in Python "
requires-python = ">=3.11"
dependencies = [
    "crcmod",
]
dynamic = ["readme"]

[tool.setuptools]
packages = [
    "ext4",
]

[tool.setuptools.dynamic]
readme = {file= ["README.md"], content-type = "text/markdown"}

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
